# CPP-Pass

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.md  README.md  README_professor.md
cmake/: FindTCLAP.cmake
src/: CMakeLists.txt  disk_storage.cpp  entry.cpp  main.cpp  safe_string.cpp  storage.cpp
src/include/: catch.h  disk_storage.h  entry.h  safe_string.h  storage.h
test/: CMakeLists.txt  test_safe_string.cpp  test_storage.cpp
